/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/


2025-08-27 18:20 UTC+0200 Wilfried Brunken DF7BE
* source/gtk/hprinter.prg
* source/winapi/hprinter.prg
  ! For easier bugfixing Ticket 207:
  ! Reduce differences (with WinMerge)
  

2025-08-27 10:40 UTC+0200 Wilfried Brunken DF7BE
* test/tickets/Ticket207.prg
  ! For experiment i added (Ubuntu)
  ! oPrinter:Preview()
  ! Result see post to ticket.

2025-08-25 17:30 UTC+0200 Wilfried Brunken DF7BE
* source/cross/hmisccross.prg
* test/tickets/Ticket207.prg
* doc/hwgdoc_functions.html
  ! New function hwg_xvalLog2()
  ! Enhancement of hwg_xvalLog()
  ! Allows debugging on
  ! arrays with sub arrays.
  ! (Need to help for
  ! debugging of ticket207). 


2025-08-25 10:00 UTC+0200 Wilfried Brunken DF7BE
* test/tickets/Ticket90.prg
  ! Added french test text.
  ! For result see post to Ticket.
  ! (it is running OK on Ubuntu)


2025-08-24 10:45 UTC+0200 Wilfried Brunken DF7BE
* test/tickets/Ticket207.hbp
* test/tickets/Ticket207.prg
  ! The bug can be reproduced
  ! with this test program.
  ! Bugfixing to be continued


2025-08-19 17:30 UTC+0200 Wilfried Brunken DF7BE
* doc/hwgdoc_functions.html
* source/gtk/gtkmain.prg
* source/winapi/guimain.prg
* test/tickets/Ticket90.hbp
* test/tickets/Ticket90.prg
  ! Ticket #90:
  ! Bugfix in hwg_WChoice() on GTK.
  ! For details see post to ticket
  ! an comment in test program.


2025-07-07 18:10 UTC+0200 Wilfried Brunken DF7BE
* Install_RaspberryPi.txt
  ! Instructions for Raspberry Pi 5 added


2025-07-04 16:20 UTC+0200 Wilfried Brunken DF7BE
* source/cross/hmisccross.prg
* doc/hwgdoc_functions.html
* samples/demo.ch
  ! New Function hwg_UNIX2DOS()
  ! added, for common purposes.