@@ -16,6 +16,11 @@
 */
 
 
+2025-08-28 08:30 UTC+0200 Wilfried Brunken DF7BE
+* doc/hwgdoc_classes.html
+  ! Document for HPRINTER class updated
+  
+
 2025-08-27 18:20 UTC+0200 Wilfried Brunken DF7BE
 * source/gtk/hprinter.prg
 * source/winapi/hprinter.prg
